--- a/svelte-test/index.html
+++ b/svelte-test/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Svelte</title>
+    <link rel="stylesheet" href="https://cdn.hello.coop/css/hello-btn.css"/>
   </head>
   <body>
     <div id="app"></div>
